spacing corrected
also section moved from footer to main

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -24,7 +24,7 @@
     text-decoration: none;
     font-size: 26px;
     font-weight: 700;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
   }
 
 
@@ -76,7 +76,7 @@ color: var(--primary-white-color);
   .hero-header {
     font-weight: 900;
     font-size: 44px;
-    letter-spacing: 6%;
+    letter-spacing: 0.06em;
     text-transform: uppercase;
     text-align: center;
   }
@@ -89,7 +89,7 @@ color: var(--primary-white-color);
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 16px;
-    letter-spacing: 6%;
+    letter-spacing: 0.06em;
     text-align: center;
   }
 
@@ -102,7 +102,7 @@ color: var(--primary-white-color);
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 14px;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
     
   }
@@ -111,7 +111,7 @@ color: var(--primary-white-color);
     color: var(--primarily-text-color);
     font-weight: 400;
     font-size: 14px;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 
   }
 
@@ -121,7 +121,7 @@ color: var(--primary-white-color);
       color: var(--title-text-color);
       font-weight: 700;
       font-size: 36px;
-      letter-spacing: 3%;
+      letter-spacing: 0.03em;
       text-align: center;
   }
 
@@ -131,14 +131,14 @@ color: var(--primary-white-color);
       color: var(--title-text-color);
       font-weight: 500;
       font-size: 16px;
-      letter-spacing: 3%;
+      letter-spacing: 0.03em;
   }
 
   .team-description {
       color: var(--primarily-text-color);
       font-weight: 400;
       font-size: 16px;
-      letter-spacing: 3%;
+      letter-spacing: 0.03em;
   }
 
   .logo-light {
@@ -148,7 +148,7 @@ color: var(--primary-white-color);
     text-decoration: none;
     font-size: 26px;
     font-weight: 700;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
   }
 
   .footer-contacts {
@@ -156,7 +156,7 @@ color: var(--primary-white-color);
     font-size: 14px;
     line-height: 24px;
     font-weight: 400;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
     font-style: normal;
     text-decoration: none;
   }
@@ -166,7 +166,7 @@ color: var(--primary-white-color);
     font-size: 14px;
     line-height: 24px;
     font-weight: 400;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
     font-style: normal;
   }
 
@@ -188,7 +188,7 @@ color: var(--primary-white-color);
     font-size: 16px;
     line-height: 26px;
     font-weight: 500;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
     font-style: normal;
     text-decoration: none;
   }
@@ -205,7 +205,7 @@ color: var(--primary-white-color);
     font-size: 18px;
     line-height: 26px;
     font-weight: 600;
-    letter-spacing: 6%;
+    letter-spacing: 0.06em;
     font-style: normal;
     text-decoration: none;
   }
@@ -215,6 +215,6 @@ color: var(--primary-white-color);
     font-size: 16px;
     line-height: 30px;
     font-weight: 400;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
     font-style: normal;
   }
